Changed http to https in the CSS links only.

--- a/tr15/tr15.html
+++ b/tr15/tr15.html
@@ -12,7 +12,7 @@
 
 <title>UAX #15: Unicode Normalization Forms</title>
 
-<link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports-v2.css">
+<link rel="stylesheet" type="text/css" href="https://www.unicode.org/reports/reports-v2.css">
 
 
 </head>
