--- a/tr24/tr24.html
+++ b/tr24/tr24.html
@@ -11,7 +11,7 @@
 
 
 
-<link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports-v2.css">
+<link rel="stylesheet" type="text/css" href="https://www.unicode.org/reports/reports-v2.css">
 
 
 </head>
