--- a/tr46/tr46.html
+++ b/tr46/tr46.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <title>UTS #46: Unicode IDNA Compatibility Processing</title>
 <link rel="stylesheet" type="text/css"
-	href="http://www.unicode.org/reports/reports-v2.css">
+	href="https://www.unicode.org/reports/reports-v2.css">
 <style type="text/css">
 <!--
 .linkstyle {
