--- a/tr50/tr50.html
+++ b/tr50/tr50.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports-v2.css" />
+    <link rel="stylesheet" type="text/css" href="https://www.unicode.org/reports/reports-v2.css" />
     <title>UAX #50: Unicode Vertical Text Layout</title>
     <style type="text/css">
 table#values {
