--- a/tr51/tr51.html
+++ b/tr51/tr51.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>UTS #51: Unicode Emoji</title>
 <link rel="stylesheet" type="text/css"
-	href="http://www.unicode.org/reports/reports-v2.css">
+	href="https://www.unicode.org/reports/reports-v2.css">
 <style type="text/css">
 <!--
 .green {
