--- a/tr9/tr9.html
+++ b/tr9/tr9.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <title>UAX #9: Unicode Bidirectional Algorithm</title>
 
-<link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports-v2.css">
+<link rel="stylesheet" type="text/css" href="https://www.unicode.org/reports/reports-v2.css">
 
 <style type="text/css">
 .control {
