--- a/tr31/tr31.html
+++ b/tr31/tr31.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <title>UAX #31: Unicode Identifier and Pattern Syntax</title>
 <link rel="stylesheet" type="text/css"
-	href="http://www.unicode.org/reports/reports-v2.css">
+	href="https://www.unicode.org/reports/reports-v2.css">
 </head>
 <body>
 
