--- a/tr39/tr39.html
+++ b/tr39/tr39.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Language" content="en-us">
 <title>UTS #39: Unicode Security Mechanisms</title>
 <link rel="stylesheet" type="text/css"
-	href="http://www.unicode.org/reports/reports-v2.css">
+	href="https://www.unicode.org/reports/reports-v2.css">
 <style type="text/css">
 <!--
 a:visited.plain, a:link.plain {
