Fixe http to https in link to CSS.

--- a/tr10/tr10.html
+++ b/tr10/tr10.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
 <title>UTS #10: Unicode Collation Algorithm</title>
-<link rel="stylesheet" type="text/css" href="http://www.unicode.org/reports/reports-v2.css">
+<link rel="stylesheet" href="https://www.unicode.org/reports/reports-v2.css" type="text/css">
 <style type="text/css">
 <!--
 span.marked  { font-weight: bold; border-style: dotted; border-width: 1px; background-color: 
