--- a/tr53/tr53.html
+++ b/tr53/tr53.html
@@ -5,7 +5,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
-<link rel="stylesheet" href="http://www.unicode.org/reports/reports-v2.css" type="text/css">
+<link rel="stylesheet" href="https://www.unicode.org/reports/reports-v2.css" type="text/css">
 <title>UTR #53: Unicode Arabic Mark Rendering</title>
 
 </head>
