--- a/tr18/tr18.html
+++ b/tr18/tr18.html
@@ -6,7 +6,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
-<link rel="stylesheet" type="text/css" href="http://unicode.org/reports/reports-v2.css">
+<link rel="stylesheet" type="text/css" href="https://unicode.org/reports/reports-v2.css">
 <title>UTS #18: Unicode Regular Expressions</title>
 
 <style type="text/css">
