--- a/tr36/tr36.html
+++ b/tr36/tr36.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Language" content="en-us">
-<link rel="stylesheet" href="http://www.unicode.org/reports/reports.css"
+<link rel="stylesheet" href="https://www.unicode.org/reports/reports-v2.css"
 	type="text/css">
 <title>UTR #36: Unicode Security Considerations</title>
 <style type="text/css">
