Adjusted paragraph with removed bookmark links. Bumped date.

--- a/tr18/tr18.html
+++ b/tr18/tr18.html
@@ -73,7 +73,7 @@ a:hover.plain {
 			</tr>
 			<tr>
 				<td>Date</td>
-				<td>2020-06-05</td>
+				<td>2020-06-17</td>
 			</tr>
 			<tr>
 				<td style="height: 31px">This Version</td>
@@ -584,12 +584,8 @@ ESCAPE           := &quot;\&quot;</pre>
 		</table>
 		<blockquote>
 			<p>
-				For example, an implementation may claim conformance to Level 1,
-				plus <a href="#Context_Matching">Context Matching</a>, and <a
-					href="#Partial_Matches">Incremental Matches</a>. Another
-				implementation may claim conformance to Level 1, except for <a
-					href="#Subtraction_and_Intersection"> Subtraction and
-					Intersection</a>.
+			For example, an implementation may claim conformance to Level 1, 
+			except for <a href="#Subtraction_and_Intersection">Subtraction and Intersection</a>.
 			</p>
 		</blockquote>
 		<p>
@@ -3933,7 +3929,7 @@ Note: the operation A ~~ B is handled in terms of other operations according to 
 		Resolving Character Classes with Strings</a> for handling negated properties of strings.</li>
 	        </ul>
 		  </li>
-		  <li>Section 1.2.3 <a href="#Other_Properties">Other Properties</a>
+		  <li>Section 1.2.3 Other Properties
             <ul>
               <li>Moved down to 2.8 (shouldn't have been discussed at Level 1), and revised to make the optional nature clear.</li>
             </ul>
@@ -3962,8 +3958,7 @@ Note: the operation A ~~ B is handled in terms of other operations according to 
         <li>Noted that the boundary definitions in CLDR are more comprehensive.</li>
         </ul>
 		  </li>
-		  <li>Section 2.2.1 <a href="#Grapheme_Cluster_Mode">Grapheme
-		  Cluster Mode</a> 
+		  <li>Section 2.2.1 Grapheme Cluster Mode 
 		    <ul>
 		      <li>Removed subsection that should have been in Level 3.</li>
 		      <li>Fixed lack of whitespace in the syntax for ITEM.</li>
@@ -3990,7 +3985,7 @@ Note: the operation A ~~ B is handled in terms of other operations according to 
 		  <li>Section 2.8 <a href="#optional_properties">Optional
 		  Properties</a>
 		    <ul>
-		      <li>Moved from Section 1.2.3 <a href="#Other_Properties">Other Properties</a></li>
+		      <li>Moved from Section 1.2.3 Other Properties</li>
 		      <li>Made it clear that these are entirely optional.</li>
 		      <li>Removed some properties now covered in Section 2.7 <a href="#Full_Properties">Full Properties</a></li>
               <li>Changed certain cases to be properties of strings.</li>
