Corrected change highlighting for Rev 43

--- a/tr9/tr9.html
+++ b/tr9/tr9.html
@@ -3006,8 +3006,8 @@ that those characters are also ordered from top to bottom.</p>
   <p>The following summarizes modifications from the previous version of this 
 	annex.</p>
 
-  <h3>Revision 43</h3>
-    <ul>
+  <h3 class="changed">Revision 43</h3>
+    <ul class="changed">
         <li><b>Proposed Update</b> for Unicode 14.0.0.</li>
         <li>Updated <a href="#Vertical_Text">Section 6.2</a>, Vertical Text to clarify how
           the Bidirectional Algorithm is (or is not) used when text is laid
